--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 
 *,
 *::before,
@@ -36,7 +36,7 @@ html {
 
 body {
     box-sizing: border-box;
-    font-family: 'Open Sans',
+    font-family: 'Source Sans Pro',
         sans-serif;
     background-color: $bg-color;
     width: 120rem;
