--- a/static/scss/_upper.scss
+++ b/static/scss/_upper.scss
@@ -28,7 +28,7 @@
     line-height: 1.6;
     color: rgba($text-color, .85);
     font-weight: 300;
-    text-align: center;
+    text-align: justify;
 
     p {
         margin-top: 1.5rem;
