--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -1,3 +1,3 @@
 $bg-color: rgba(236, 233, 226, 1);
-$text-color: rgba(76, 76, 76, 1);
-$emp-color: rgb(81, 152, 114);
+$text-color: rgba(18, 18, 18, 1);
+$emp-color: rgba(81, 152, 114, 1);
