--- a/static/scss/_graphs.scss
+++ b/static/scss/_graphs.scss
@@ -18,12 +18,29 @@
     margin-bottom: 2.5rem;
 }
 
+#regionsTitle {
+    margin-top: 5rem;
+    margin-bottom: 2.5rem;
+}
+
+#mapTitle {
+    
+}
+
 .density-graphs {
     height: 55rem;
 }
 
 .spider-graph {
     height: 55rem;
+}
+
+.regions-graph {
+    height: 77rem;
+}
+
+.map-graph {
+    height: 80rem;
 }
 
 .tooltip {
