--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,11 +84,21 @@ body {
   margin-top: 1rem;
   margin-bottom: 2.5rem; }
 
+#regionsTitle {
+  margin-top: 5rem;
+  margin-bottom: 2.5rem; }
+
 .density-graphs {
   height: 55rem; }
 
 .spider-graph {
   height: 55rem; }
+
+.regions-graph {
+  height: 77rem; }
+
+.map-graph {
+  height: 80rem; }
 
 .tooltip {
   background-color: #519872;
