--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap");
 *,
 *::before,
 *::after {
@@ -12,10 +12,12 @@
   -moz-osx-font-smoothing: grayscale; }
 
 ::-moz-selection {
-  background-color: rgba(81, 152, 114, 0.5); }
+  background-color: rgba(81, 152, 114, 0.5);
+  color: #ece9e2; }
 
 ::selection {
-  background-color: rgba(81, 152, 114, 0.5); }
+  background-color: rgba(81, 152, 114, 0.5);
+  color: #ece9e2; }
 
 html {
   font-size: 62.5%; }
@@ -28,14 +30,14 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   background-color: #ece9e2;
   width: 120rem;
   margin: 0 auto;
   color: #121212; }
   @media only screen and (max-width: 1000px) {
     body {
-      width: 97.5%; } }
+      width: 95%; } }
 
 .emphasize {
   color: #519872;
@@ -88,6 +90,9 @@ body {
   margin-top: 5rem;
   margin-bottom: 2.5rem; }
 
+#mapTitle {
+  margin-top: 1rem; }
+
 .density-graphs {
   height: 55rem; }
 
@@ -98,7 +103,7 @@ body {
   height: 77rem; }
 
 .map-graph {
-  height: 80rem; }
+  height: 70rem; }
 
 .tooltip {
   background-color: #519872;
@@ -108,7 +113,10 @@ body {
   padding: .5rem 1rem;
   position: absolute;
   left: -9999px;
-  font-size: 1.4rem; }
+  font-size: 1.3rem;
+  max-width: 20rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07), 0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
+  padding: 1rem; }
   .tooltip::after {
     content: "";
     position: absolute;
@@ -118,6 +126,37 @@ body {
     border-width: 7px;
     border-style: solid;
     border-color: transparent transparent #519872 transparent; }
+  .tooltip--title {
+    margin-bottom: 1rem; }
+  .tooltip--text {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
 
 .lower {
   margin-bottom: 5rem; }
+
+.footer {
+  width: 80%;
+  margin: 0 auto; }
+  .footer--title {
+    font-weight: 300;
+    margin: 1rem 0;
+    font-size: 1.4rem;
+    color: #519872; }
+  .footer--sources {
+    color: rgba(18, 18, 18, 0.5);
+    margin-bottom: 1rem;
+    list-style: none;
+    display: flex;
+    align-items: center; }
+    .footer--sources__source:not(:last-of-type) {
+      margin-right: 3rem; }
+    .footer--sources__source a {
+      color: inherit;
+      text-decoration: none;
+      font-size: 1.2rem;
+      font-weight: 300;
+      transition: color .25s ease-in-out; }
+      .footer--sources__source a:hover, .footer--sources__source a:focus {
+        color: #121212; }
