--- a/static/scss/_graphs.scss
+++ b/static/scss/_graphs.scss
@@ -24,7 +24,7 @@
 }
 
 #mapTitle {
-    
+    margin-top: 1rem;
 }
 
 .density-graphs {
@@ -40,7 +40,7 @@
 }
 
 .map-graph {
-    height: 80rem;
+    height: 70rem;
 }
 
 .tooltip {
@@ -51,7 +51,15 @@
     padding: .5rem 1rem;
     position: absolute;
     left: -9999px;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
+    max-width: 20rem;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07),
+        0 2px 4px rgba(0, 0, 0, 0.07),
+        0 4px 8px rgba(0, 0, 0, 0.07),
+        0 8px 16px rgba(0, 0, 0, 0.07),
+        0 16px 32px rgba(0, 0, 0, 0.07),
+        0 32px 64px rgba(0, 0, 0, 0.07);
+    padding: 1rem;
 
     &::after {
         content: "";
@@ -62,5 +70,15 @@
         border-width: 7px;
         border-style: solid;
         border-color: transparent transparent $emp-color transparent;
+    }
+
+    &--title {
+        margin-bottom: 1rem;
+    }
+
+    &--text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
