--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -48,6 +48,81 @@ body {
     @include responsive(1000px) {
         width: 95%;
     }
+    position: relative;
+}
+
+body.hidden {
+    overflow: hidden;
+}
+
+body>div.overlay {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    left: 0vw;
+    top: 0vh;
+    transform: translateX(-9999px);
+    background-color: $bg-color;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    opacity: 0;
+    transition-property: translateX, opacity;
+    transition: 1s ease-in-out;
+    color: $text-color;
+
+    p:nth-child(2) {
+        margin-bottom: 2rem;
+    }
+
+    &.show {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.spinner {
+    width: 40px;
+    height: 40px;
+    background-color: $emp-color;
+
+    margin: 50px auto;
+    -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+    animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-rotateplane {
+    0% {
+        -webkit-transform: perspective(120px)
+    }
+
+    50% {
+        -webkit-transform: perspective(120px) rotateY(180deg)
+    }
+
+    100% {
+        -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg)
+    }
+}
+
+@keyframes sk-rotateplane {
+    0% {
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+    }
+
+    50% {
+        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+    }
+
+    100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    }
 }
 
 .emphasize {
