--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400&display=swap");
 *,
 *::before,
 *::after {
@@ -30,12 +30,11 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Karla', sans-serif;
   background-color: #ece9e2;
   width: 120rem;
   margin: 0 auto;
-  color: #121212;
-  /* position: relative; */ }
+  color: #121212; }
   @media only screen and (max-width: 1000px) {
     body {
       width: 95%; } }
